--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:label="@string/app_name">
 
         </activity>
-        <activity android:name=".TestOuverture">
+        <activity android:name=".RedirectionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
